@@ -508,7 +508,7 @@ static int firebird_handle_get_attribute(pdo_dbh_t const *dbh, long attr, zval *
 	pdo_firebird_db_handle *H = (pdo_firebird_db_handle *)dbh->driver_data;
 
 	switch (attr) {
-		char tmp[200];
+		char tmp[512];
 		
 		case PDO_ATTR_AUTOCOMMIT:
 			ZVAL_LONG(val,dbh->auto_commit);
@@ -551,6 +551,10 @@ static int firebird_handle_get_attribute(pdo_dbh_t const *dbh, long attr, zval *
 				ZVAL_STRING(val,tmp,1);
 				return 1;
 			}
+			
+		case PDO_ATTR_FETCH_TABLE_NAMES:
+			ZVAL_BOOL(val, H->fetch_table_names);
+			return 1;
 	}
 	return 0;
 }       
